--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@mui/styled-engine-sc": "^6.2.0",
     "cookies-next": "^5.0.2",
     "firebase": "^11.1.0",
     "next": "15.1.0",
